add feature work hour
